--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET=12345
 NODE_ENV = 'production'
+DB_URI=postgres://vqsexyea:LTAt36KafrnaMldQlFCbGhcRtZTb3uJg@isabelle.db.elephantsql.com/vqsexyea
