add connection to database

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SECRET=12345
 NODE_ENV = 'production'
 DB_URI=postgres://vqsexyea:LTAt36KafrnaMldQlFCbGhcRtZTb3uJg@isabelle.db.elephantsql.com/vqsexyea
+DB_USER=vqsexyea
+DB_HOST=isabelle.db.elephantsql.com
+DB_SECRET=LTAt36KafrnaMldQlFCbGhcRtZTb3uJg
